# server/api/controllers/trade/router.js
@@ -1,0 +1,9 @@
+import * as express from 'express';
+import controller from './controller';
+
+export default express
+  .Router()
+  .post('/', controller.updateTrade)
+  .post('/new', controller.createTrade)
+  .get('/:accesstoken', controller.queryUserTrades)
+  .post('/history', controller.queryHistoryTrades)
